1.0.8
修复 monitor beacon的一些bug
增加demo里面的monitor beacon功能